[workspace]
resolver = "2"

members = [
    "packages/iodilos",
    "packages/iodilos-macros",
]

[package]
name = "iodilos-examples"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dev-dependencies]
iodilos = { path = "packages/iodilos" }
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1.45.1", features = ["macros", "rt", "sync", "time"] }
# example-specific deps (calculator)
mexprp = { version = "0.3.1", default-features = false }
# example-specific deps (progress_bar)
futures-timer = "3.0.3"
# example-specific deps (weather)
serde = { version = "1.0.210", features = ["derive"] }
ureq = { version = "2.12.1", features = ["json"] }

